--- a/20240217/css/style.css
+++ b/20240217/css/style.css
@@ -32,18 +32,19 @@ img {
   max-width: 100%;
   vertical-align: bottom;
   border: none;
+  width: 100%;
 }
 
 /*CSSリセット終わり*/
 
 body {
   background-color: #eeeeee;
-  max-width: 960px;
 }
 .section-text {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  max-width: 960px;
 }
 
 h1 {
@@ -53,17 +54,16 @@ h1 {
   margin: 30px;
 }
 
-li {
+h2 {
   font-size: 20px;
   color: darkcyan;
   list-style-type: none;
   border-left: 5px solid;
+  padding-left: 4px;
   margin: 5px;
 }
 
-.first-text,
-.second-text,
-.third-text {
+.all-text {
   background-color: white;
   margin: 10px;
 }
@@ -77,7 +77,4 @@ li {
   .section-text {
     display: block;
   }
-}
-.img {
-  width: 100%;
 }
